--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
         <meta name="description" content="Do things in life." />
         <meta name="theme-color" content="#ffffff" />
 
         <!-- Standard PWA tags -->
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-        <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 
         <!-- iOS specific PWA tags -->
         <meta name="apple-mobile-web-app-capable" content="yes" />
