Small change to let this happen

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
 		<meta name="description" content="Do things in life." />
 		<meta name="theme-color" content="#ffffff" />
 
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
 		<!-- Standard PWA tags -->
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
