--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
 		/>
 		<meta name="description" content="Do things in life." />
-		<meta name="theme-color" content="#ffffff" />
+		<meta name="theme-color" content="#4785FF" />
 
 		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
